load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

td_library(
    name = "PassesTdFiles",
    srcs = ["Passes.td"],
    deps = [
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

gentbl_cc_library(
    name = "PassesIncGen",
    tbl_outs = [
        (
            ["--gen-pass-decls"],
            "Passes.h.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "Passes.td",
    deps = [
        ":PassesTdFiles",
    ],
)

cc_library(
    name = "Transforms",
    srcs = [
        "CoralNPUAffinityAnnotation.cpp",
        "CoralNPUDumpAffinityExecutionProfile.cpp",
        "CoralNPUTileSizeSelection.cpp",
        "Passes.cpp",
    ],
    hdrs = [
        "Passes.h",
        "Passes.h.inc",
    ],
    deps = [
        ":PassesIncGen",
        "@iree_core//compiler/src/iree/compiler/Codegen/Dialect/CPU/IR:IREECPUDialect",
        "@iree_core//compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR:IREECodegenDialect",
        "@iree_core//compiler/src/iree/compiler/Codegen/Utils",
        "@iree_core//compiler/src/iree/compiler/Dialect/HAL/Analysis",
        "@iree_core//compiler/src/iree/compiler/Dialect/HAL/IR",
        "@iree_core//compiler/src/iree/compiler/Dialect/Stream/IR",
        "@iree_core//compiler/src/iree/compiler/Dialect/TensorExt/IR",
        "@iree_core//compiler/src/iree/compiler/Dialect/Util/IR",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AffineDialect",
        "@llvm-project//mlir:DialectUtils",
        "@llvm-project//mlir:FunctionInterfaces",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:LinalgDialect",
        "@llvm-project//mlir:LinalgUtils",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:TilingInterface",
    ],
)
