# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_import", "cc_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "coralnpu_compile_lib",
    srcs = ["coralnpu_compile_lib.cc"],
    hdrs = ["coralnpu_compile_lib.h"],
    deps = [
        "//compiler/Transforms",
        "@iree_core//compiler/bindings/c:headers",
        "@iree_core//compiler/src:defs",
        "@iree_core//compiler/src/iree/compiler/API/Internal:CompilerDriver",
        "@iree_core//compiler/src/iree/compiler/Pipelines",
        "@llvm-project//llvm:AMDGPUAsmParser",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:CAPIIR",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
    ],
)

# Copy the NPU linker next to the compiler binary.
# This allows the compiler to find the linker at runtime when executed manually
# from bazel-bin, via the findTool fallback mechanism.
cc_import(
    name = "libIREECompiler_import",
    shared_library = "@iree_core//lib:libIREECompiler.so",
)

cc_binary(
    name = "coralnpu-compile",
    srcs = ["coralnpu-compile-main.cc"],
    data = [
        "//:riscv32_linker_copy",
        "//crt:crt_files",
    ],
    linkopts = ["-Wl,-rpath,$$ORIGIN:$$ORIGIN/../lib:$$ORIGIN/../../lib"],
    deps = [
        ":coralnpu_compile_lib",
        ":libIREECompiler_import",
        "@iree_core//compiler/src:defs",
        "@iree_core//compiler/src/iree/compiler/API/Internal:IREECompileToolEntryPoint",
    ],
)
