# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "export_gemma",
    srcs = ["export_gemma.py"],
    deps = [
        "@pip_deps//gemma",
        "@pip_deps//jax",
        "@pip_deps//jaxlib",
    ],
)

py_binary(
    name = "chat_cpu",
    srcs = ["chat_cpu.py"],
    deps = [
        "@iree_core//runtime/bindings/python:runtime",
        "@pip_deps//gemma",
        "@pip_deps//jax",
        "@pip_deps//numpy",
    ],
)

py_binary(
    name = "export_gemma_split",
    srcs = ["export_gemma_split.py"],
    deps = [
        "@pip_deps//gemma",
        "@pip_deps//jax",
        "@pip_deps//jaxlib",
    ],
)

py_binary(
    name = "chat_cpu_split",
    srcs = ["chat_cpu_split.py"],
    deps = [
        "@iree_core//runtime/bindings/python:runtime",
        "@pip_deps//gemma",
        "@pip_deps//jax",
        "@pip_deps//numpy",
    ],
)
