# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# Staged runtime package directory target
genrule(
    name = "stage_package",
    srcs = [
        "@iree_core//runtime/bindings/python:runtime",
        "@iree_core//runtime/bindings/python:_runtime.so",
        "//runtime/sim:libcoralnpu_simulator_mpact.so",
        "@iree_core//tools:iree-run-module",
        "@iree_core//tools:iree-benchmark-module",
    ],
    outs = [
        "coralnpu_runtime_package/coralnpu/__init__.py",
        "coralnpu_runtime_package/coralnpu/runtime/__init__.py",
        "coralnpu_runtime_package/coralnpu/runtime/_binding.py",
        "coralnpu_runtime_package/coralnpu/runtime/array_interop.py",
        "coralnpu_runtime_package/coralnpu/runtime/benchmark.py",
        "coralnpu_runtime_package/coralnpu/runtime/flags.py",
        "coralnpu_runtime_package/coralnpu/runtime/function.py",
        "coralnpu_runtime_package/coralnpu/runtime/io.py",
        "coralnpu_runtime_package/coralnpu/runtime/system_api.py",
        "coralnpu_runtime_package/coralnpu/runtime/system_setup.py",
        "coralnpu_runtime_package/coralnpu/runtime/typing.py",
        "coralnpu_runtime_package/coralnpu/runtime/version.py",
        "coralnpu_runtime_package/coralnpu/runtime/_runtime_libs/_runtime.so",
        "coralnpu_runtime_package/coralnpu/runtime/_runtime_libs/libcoralnpu_simulator_mpact.so",
        "coralnpu_runtime_package/coralnpu/runtime/_runtime_libs/iree-run-module",
        "coralnpu_runtime_package/coralnpu/runtime/_runtime_libs/iree-benchmark-module",
    ],
    cmd = """
        STAGE_DIR=$(@D)/coralnpu_runtime_package
        mkdir -p $$STAGE_DIR/coralnpu/runtime/_runtime_libs

        # 1. Init files & python runtime files
        touch $$STAGE_DIR/coralnpu/__init__.py
        echo '\"\"\"CoralNPU Runtime Package.\"\"\"' > $$STAGE_DIR/coralnpu/runtime/__init__.py

        for f in $(locations @iree_core//runtime/bindings/python:runtime); do
          if [[ "$$f" == *.py && "$$f" == */iree/runtime/* ]]; then
            rel_path=$${f#*/iree/runtime/}
            mkdir -p $$STAGE_DIR/coralnpu/runtime/$$(dirname $$rel_path)
            cp $$f $$STAGE_DIR/coralnpu/runtime/$$rel_path
          fi
        done

        for f in $$(find $$STAGE_DIR/coralnpu/runtime -name "*.py"); do
          sed -i 's/iree\\.runtime/coralnpu\\.runtime/g' $$f
          sed -i 's/iree\\._runtime/coralnpu\\.runtime\\._runtime_libs/g' $$f
          sed -i 's/\\.\\._runtime\\.libs/coralnpu\\.runtime\\._runtime_libs/g' $$f
        done

        # Expose runtime symbols at coralnpu.runtime
        echo 'import sys, types' >> $$STAGE_DIR/coralnpu/runtime/__init__.py
        echo 'from coralnpu.runtime.system_api import SystemContext, Config, load_vm_flatbuffer, load_vm_module' >> $$STAGE_DIR/coralnpu/runtime/__init__.py
        echo 'from coralnpu.runtime._binding import *' >> $$STAGE_DIR/coralnpu/runtime/__init__.py
        echo 'from coralnpu.runtime import array_interop' >> $$STAGE_DIR/coralnpu/runtime/__init__.py
        echo 'if "iree" not in sys.modules:' >> $$STAGE_DIR/coralnpu/runtime/__init__.py
        echo '    sys.modules["iree"] = types.ModuleType("iree")' >> $$STAGE_DIR/coralnpu/runtime/__init__.py
        echo 'sys.modules["iree"].runtime = sys.modules[__name__]' >> $$STAGE_DIR/coralnpu/runtime/__init__.py
        echo 'sys.modules["iree.runtime"] = sys.modules[__name__]' >> $$STAGE_DIR/coralnpu/runtime/__init__.py
        echo 'sys.modules["iree.runtime.array_interop"] = array_interop' >> $$STAGE_DIR/coralnpu/runtime/__init__.py

        # 2. Shared objects & binaries
        cp $(location @iree_core//runtime/bindings/python:_runtime.so) $$STAGE_DIR/coralnpu/runtime/_runtime_libs/_runtime.so
        cp $(location //runtime/sim:libcoralnpu_simulator_mpact.so) $$STAGE_DIR/coralnpu/runtime/_runtime_libs/libcoralnpu_simulator_mpact.so
        cp $(location @iree_core//tools:iree-run-module) $$STAGE_DIR/coralnpu/runtime/_runtime_libs/iree-run-module
        cp $(location @iree_core//tools:iree-benchmark-module) $$STAGE_DIR/coralnpu/runtime/_runtime_libs/iree-benchmark-module
        touch $$STAGE_DIR/coralnpu/runtime/_runtime_libs/__init__.py
    """,
)

# Build wheel using create_wheel.py
genrule(
    name = "wheel",
    srcs = [
        ":stage_package",
        "//build_tools/bazel:create_wheel.py",
    ],
    outs = ["coralnpu_runtime-0.0.1-py3-none-any.whl"],
    cmd = """
        STAGE_DIR=$$(dirname $$(dirname $$(echo $(locations :stage_package) | cut -d' ' -f1)))
        python3 $(location //build_tools/bazel:create_wheel.py) \
            --package-dir $$STAGE_DIR \
            --dist-name coralnpu_runtime \
            --version 0.0.1 \
            --summary "CoralNPU Runtime for IREE" \
            --requires-dist numpy \
            --requires-dist ml_dtypes \
            --output $@


    """,
)
